# wit-bindgen-symbol-repro

./: Cargo.toml  README.md
src/: bindings.rs  lib.rs
wit/: world.wit
