[package]
name = "wit-bindgen-symbol-repro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = { version = "0.18.0", default-features = false, features = ["realloc"] }
wasi = "0.12.0"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:wit-bindgen-symbol-repro"

[package.metadata.component.dependencies]
